++++

== Changes with Respect To Version 4.8.8

* Fixed "preview changes" and "access request" functionality when some projections are hidden by authorizations. See bug:MID-10397[].
* bug:MID-10739[] Use SecureRandom instead of Random.
* Security update for Apache Tomcat (CVE-2025-48988) and Apache Commons FileUpload2 (CVE-2025-48976)

== Changes with Respect To Version 4.8.7

* Fixed fatal error when sorting by time column in created reports. See bug:MID-10645[].
* Fixed the task start at the next scheduled time. See bug:MID-10496[].
* Fixed the high memory usage problem and instability when completing work items in bulk. See bug:MID-10664[].
* Fixed the usage of the '_defaultAssignmentConstraints_' in the Access Request flow. See bug:MID-10425[].
* Fixed sorting for the first column in collection view. See bug:MID-10486[].
* Fixed search execution by Basic button click. See bug:MID-10365[].
* Fixed the visibility of the "Remove" password button on the Credentials panel in case of the missing authorization for this action.  See bug:MID-10507[].
* Fixed NPE on the Created Reports page in case of the incorrect query usage in the authorization definition.
Also, documentation was updated to clarify that derefencing is not supported in the filters defined within authorization. See bug:MID-10498[].
* Fixed localization error while changing the password on the Credentials page. See bug:MID-10471[].
* "DISTINCT" option was removed from simple provisioning queries (e.g. such as shadow searching) to improve the performance. Related to bug:MID-9594[], MID-10600.
* Fixed a computation of the shadow items while their retrieving.  See bug:MID-10585[].
* Fixed the accumulation of the authentication attempts while multiple authentication requests. See bug:MID-10502[].
* Relaxed query cache key equality checking, basically by ignoring the definitions (and relaxing path comparison). See bug:MID-10600[].